--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "animejs": "^3.2.1",
-    "autoprefixer": "^10.0.2",
-    "postcss": "^8.1.10",
-    "postcss-cli": "^8.2.0",
+    "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
     "react-anime": "^3.0.3",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^8.7.1",
-    "tailwindcss": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -49,6 +46,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "autoprefixer": "^10.4.13",
+    "gh-pages": "^3.1.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
