--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://emirahajj.github.io",
-  "name": "emirahajj.github.io",
+  "homepage": "https://emshano.github.io",
+  "name": "emshano.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-anime": "^3.0.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
     "reactstrap": "^8.7.1",
     "web-vitals": "^0.2.4"
